adding more pages

--- a/404.html
+++ b/404.html
@@ -135,6 +135,7 @@
             <button onclick="topFunction()" id="movetop" title="Go to top">
                 <span class="fa fa-angle-up"></span>
             </button>
+         <div id="preloader"></div>
             <script src="./Js/Main.js"></script>
             <script>
                 // When the user scrolls down 20px from the top of the document, show the button
