--- a/NorthParks.html
+++ b/NorthParks.html
@@ -68,13 +68,11 @@
                 <div class="wrapper">
                     <div class="header">
                         <div>
-                            <h1>
-                                <a href="index.html" class="logo">Kilimangeti Tanzania Safari</a>
-                                <!-- if logo is image enable this   
+                        <h1>
 						<a class="logo" href="index.html">
-							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-						</a> -->
-                            </h1>
+							<img src="/assets/images/logo.jpeg" alt="Your logo" title="Your logo" style="height:85px;" />
+						</a> 
+                       </h1>
                         </div>
                         <div class="bottom-menu-content">
                             <input type="checkbox" id="nav" />
@@ -91,7 +89,9 @@
                                                 class="fa fa-angle-down" aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-2" />
                                         <ul class="first-dropdwon">
-                                            <li><a href="Tanzania.html">Tanzania</a></li>
+                                            <li><a href="NorthParks.html">Tanzania - North Parks</a></li>
+                                            <li><a href="SouthParks.html">Tanzania - South Parks</a></li>
+                                            <li><a href="whatonsafari.html">What to bring on Safari</a></li>
                                             <li><a href="Zanzibar.html">Zanzibar</a></li>
                                             <li><a href="Kenya.html">Kenya</a></li>
                                         </ul>
@@ -141,21 +141,16 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item  active">
-                    <img class="d-block w-100" 
-                       src="./assets/parks/DayTours/images/img6.jpg"
-                    alt="First slide">
+                    <img class="d-block w-100" src="./assets/parks/DayTours/images/img6.jpg" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" 
-                    src="./assets/parks/DayTours/images/img4.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="./assets/parks/DayTours/images/img4.jpg" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" 
-                    src="./assets/parks/DayTours/images/img3.png" alt="Third slide">
+                    <img class="d-block w-100" src="./assets/parks/DayTours/images/img3.png" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100"  
-                     src="./assets/parks/images/pa3.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="./assets/parks/images/pa3.jpg" alt="Third slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
@@ -170,74 +165,115 @@
         <!-- //Carousel wrapper -->
         <!-- //covers -->
         <!-- w3l-text-22 -->
-        <section class="w3l-grids-6">
-            <!-- grids -->
-            <div class="grids-layout">
-                <div class="wrapper">
-                    <h3 class="title-main">POPULAR TANZANIA DESTINATIONS</h3>
-                    <p class="sub-title">
-                        Welcome to Our Company! Your travel agency with guaranteed authenticity and with personalized
-                        services to make your
-                        dream adventures come true.
-                    </p>
-                    <div class="d-grid grid-column-3">
-                        <div class="gd-innf" data-aos="fade-up">
-                            <a href="./assets/parks/ArushaPark.html">
+            <section class="w3l-grids-6">
+                <!-- grids -->
+                <div class="grids-layout">
+                    <div class="wrapper">
+                      <h3 class="title-main">Tanzania – Northern parks</h3>
+                        <p class="north_title_paragraph">
+                                Northern Tanzania has many national parks that are exceptionally rich in terms of wildlife and landscapes. The Northern
+                                Parks are all must-see places to explore the Big Five. From the great migration of the Serengeti plains to the beautiful
+                                landscapes of the Ngorongoro region and Lake Natron, go exploring in this region Diversified Tanzania!
+                        </p>
+                        <div class="d-grid grid-column-3">
+                            <div class="gd-innf" data-aos="fade-up">
+                             <a href="./assets/parks/ArushaPark.html">
                                 <img class="img-responsive" src="./assets/parks/images/pa1.jpg" alt="image"></a>
-                            <p><a href="./assets/parks/ArushaPark.html" class="vv-link">Arusha National Park</a></p>
+                                    <h3>Cultural Safari – Maasai, Hdzabe and Datonga tribes</h3>
+                                <p>
+                                Explore Tanzania with this 14-day itinerary, which takes you to the best places in Tanzania. You will end your trip in
+                                Zanzibar for a well deserved rest!</p>
+                            </div>
+                            <div class="gd-innf" data-aos="fade-right">
+                                <a href="./assets/parks/serengetiPark.html">
+                                    <img class="img-responsive"
+                                        src="assets/parks/images/pa3.jpg" alt="image"></a>
+                                        <h3>10 day VIP Safari – Tarangire, Lake Manyara, ggorongoro and Serengeti
+                                      </h3>
+                                <p>Experience the VIP life for 10 days! For this VIP trip, you will enjoy a luxury safari and accomodation at our best
+                                selection of luxurious hotels. You will also be accompanied by a private and experienced guide who will be there to
+                                ensure at best that everything is as per your personal specifications.
+                                </p>
+                            </div>
+                            <div class="gd-innf" data-aos="fade-up">
+                                <a href="kilimanjaro.html"><img class="img-responsive" src="assets/parks//images/ba8.jpg"
+                                        alt="image"></a>
+                                        <h3>Safari, culture and chillout in Zanzibar
+                                    </h3>
+                                <p>
+                                    Blend safari, culture and beach on this two-week itinerary. This experience was designed to give you a well rounded
+                                experience in more than one aspects of the country’s major tourist attractions; ie the Tanzanian culture, Wilderness
+                                Safari and to conclude the experience, a relaxation in Tanzania’s most renowned beaches.</p>
+                            </div>
                         </div>
-                        <div class="gd-innf" data-aos="fade-right">
-                            <a href="./assets/parks/serengetiPark.html"><img class="img-responsive"
-                                    src="assets/parks/images/pa3.jpg" alt="image"></a>
-                            <p><a href="./assets/parks/serengetiPark.html" class="vv-link">Serengeti National Park</a>
-                            </p>
+                        <div class="d-grid grid-column-3 second-grids">
+                            <div class="gd-innf">
+                                <a href="./assets/parks/ngorongoroPark.html"><img class="img-responsive"
+                                        src="assets/parks/images/ba9.jpg" alt="image"></a>
+                                 <h3>A safari suitable for families with young children</h3>
+                                <p>
+                                This safari is built specifically to meet the need of group traveling with young children. Long driving are minimized
+                                and activities alternates between cultural and more active parts. Traditional safaris are organized. The lodges are
+                                chosen in order to allow a minimum of déplacement. Our guides will be chosen with care to interact with the children.
+                                They will be able to help them discover Tanzania, with adapted but precise vocabulary.
+                                </p>
+                            </div>
+                            <div class="gd-innf" data-aos="fade-bottom">
+                                <a href="./assets/parks/lmanyara.html">
+                                    <img class="img-responsive" 
+                                    src="assets/parks/images/pa2.jpg"
+                                        alt="image"></a>
+                                  <h3>A family safari in 9 Days</h3>
+                                <p>
+                                    Want to share safari adventures with family? This is the ideal safari for you. This trip is for those families who want
+                                    an opportunity to experience all the wild and unique parts of Africa together. The itinerary is designed to give you
+                                    family friendly accommodation, routes and guides who will give a memorable stay to both children and adults.
+                                </p>
+                            </div>
+                            <div class="gd-innf" data-aos="fade-up">
+                                <a href="./assets/parks/tarangirePark.html"><img class="img-responsive"
+                                        src="assets/parks/images/ba6.jpg" alt="image"></a>
+                                <h3>The best of Tanzania in 7 Days</h3>
+                                <p>
+                                    Let us hold your hand and take you to Tanzania’s must see places.
+                                    
+                                    With one of our most popular itineraries below, we guarantee you that whatever you desire, we can provide. Whether you
+                                    want to explore the bush or the beach. Whether you want a budget or luxurious VIP safari.
+                                </p>
+                            </div>
                         </div>
-                        <div class="gd-innf" data-aos="fade-up">
-                            <a href="kilimanjaro.html"><img class="img-responsive" src="assets/parks//images/ba8.jpg"
-                                    alt="image"></a>
-                            <p><a href="kilimanjaro.html" class="vv-link">Kilimanjaro National Park</a></p>
-                        </div>
-                    </div>
-                    <div class="d-grid grid-column-3 second-grids">
-                        <div class="gd-innf">
-                            <a href="./assets/parks/ngorongoroPark.html"><img class="img-responsive"
-                                    src="assets/parks/images/ba9.jpg" alt="image"></a>
-                            <p>
-                                <a href="./assets/parks/ngorongoroPark.html" class="vv-link">Ngorongoro National
-                                    Park</a></p>
-                        </div>
-                        <div class="gd-innf" data-aos="fade-bottom">
-                            <a href="./assets/parks/lmanyara.html"><img class="img-responsive"
-                                    src="assets/parks/images/pa2.jpg" alt="image"></a>
-                            <p><a href="./assets/parks/lmanyara.html" class="vv-link">Lake Manyara National Park</a>
-                            </p>
-                        </div>
-                        <div class="gd-innf" data-aos="fade-up">
-                            <a href="./assets/parks/tarangirePark.html"><img class="img-responsive"
-                                    src="assets/parks/images/ba6.jpg" alt="image"></a>
-                            <p><a href="./assets/parks/tarangirePark.html" class="vv-link">Tarangire National Park</a>
-                            </p>
-                        </div>
+                            <div class="d-grid grid-column-3 second-grids">
+                                <div class="gd-innf">
+                                    <a href="./assets/parks/ngorongoroPark.html"><img class="img-responsive" src="assets/parks/images/ba9.jpg"
+                                            alt="image"></a>
+                                    <h3>12 days honeymoon safari</h3>
+                                    <p>
+                                    Fly to Tanzania in love for this special event. Between 4×4 safaris, local culture, beach and discovery of fauna and
+                                    flora, this stay will allow you to spend magical moments with your partner while discovering the country in an exclusive
+                                    way. You will spend your nights in lodges and charming accommodations which were specifically selected for this theme.
+                                    </p>
+                                </div>
+                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- //grids -->
-        </section>
+                <!-- //grids -->
+            </section>
         <!-- Call to action 29 block -->
-    <section class="w3l-call-to-action-29">
-        <div class="cal-action-29">
-            <div class="wrapper">
-                <div class="action-main-29 align-center">
-                    <h4 class="cal-action-text-29">
-                        Buy a Tour Safari have a new life Experience
-                    </h4>
-                    <p>If you are ever looking for a places to stay in your vacation, Kilimangeti Tanzania Safari have you
-                        covered. We have the most affordable price for our safari packages </p>
-                    <a href="book.html" class="buttonbg">Book Now</a>
+        <section class="w3l-call-to-action-29">
+            <div class="cal-action-29">
+                <div class="wrapper">
+                    <div class="action-main-29 align-center">
+                        <h4 class="cal-action-text-29">
+                            Buy a Tour Safari have a new life Experience
+                        </h4>
+                        <p>If you are ever looking for a places to stay in your vacation, Kilimangeti Tanzania Safari
+                            have you
+                            covered. We have the most affordable price for our safari packages </p>
+                        <a href="book.html" class="buttonbg">Book Now</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
         <!-- //w3l-text-22 -->
         <!-- Text14 block -->
         <section class="w3l-footer-16">
@@ -291,7 +327,6 @@
             <button onclick="topFunction()" id="movetop" title="Go to top">
                 <span class="fa fa-angle-up"></span>
             </button>
-            <script src="./Js/Main.js"></script>
             <script>
                 // When the user scrolls down 20px from the top of the document, show the button
                 window.onscroll = function () {
