--- a/gallery.html
+++ b/gallery.html
@@ -75,11 +75,9 @@
                         <div class="header">
                             <div>
                                 <h1>
-                                    <a href="index.html" class="logo">Kilimangeti Safaris</a>
-                                    <!-- if logo is image enable this   
-            						<a class="logo" href="index.html">
-            							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-            						</a> -->
+                                    <a class="logo" href="index.html">
+                                        <img src="/assets/images/logo.jpeg" alt="Your logo" title="Your logo" style="height:85px;" />
+                                    </a>
                                 </h1>
                             </div>
                             <div class="bottom-menu-content">
@@ -97,7 +95,9 @@
                                                     class="fa fa-angle-down" aria-hidden="true"></span></a>
                                             <input type="checkbox" id="drop-2" />
                                             <ul class="first-dropdwon">
-                                                <li><a href="Tanzania.html">Tanzania</a></li>
+                                                <li><a href="NorthParks.html">Tanzania - North Parks</a></li>
+                                                <li><a href="SouthParks.html">Tanzania - South Parks</a></li>
+                                                <li><a href="whatonsafari.html">What to bring on Safari</a></li>
                                                 <li><a href="Zanzibar.html">Zanzibar</a></li>
                                                 <li><a href="Kenya.html">Kenya</a></li>
                                             </ul>
