--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kilimangeti Tanzania Safari</title>
     <link rel="stylesheet" href="/assets/css/style-freedom.css">
@@ -66,11 +71,9 @@
                     <div class="header">
                         <div>
                             <h1>
-                                <a href="index.html" class="logo">Kilimangeti Safaris</a>
-                                <!-- if logo is image enable this   
-						<a class="logo" href="index.html">
-							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-						</a> -->
+                                <a class="logo" href="index.html">
+                                    <img src="/assets/images/logo.jpeg" alt="Your logo" title="Your logo" style="height:85px;" />
+                                </a>
                             </h1>
                         </div>
                         <div class="bottom-menu-content">
@@ -88,7 +91,9 @@
                                                 class="fa fa-angle-down" aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-2" />
                                         <ul class="first-dropdwon">
-                                            <li><a href="Tanzania.html">Tanzania</a></li>
+                                            <li><a href="NorthParks.html">Tanzania - North Parks</a></li>
+                                            <li><a href="SouthParks.html">Tanzania - South Parks</a></li>
+                                            <li><a href="whatonsafari.html">What to bring on Safari</a></li>
                                             <li><a href="Zanzibar.html">Zanzibar</a></li>
                                             <li><a href="Kenya.html">Kenya</a></li>
                                         </ul>
@@ -178,7 +183,7 @@
 
             <h3 class="popular">Popular Affordable Tours Categories</h3>
             <div class="d-grid grid-column-3">
-                <div class="gd-innf" data-aos="fade-up">
+                <div class="gd-innf" data-aos="zoom-in" data-aos-delay="100">
                     <a href="kilimanjaro.html">
                         <img class="img-responsive" src="assets/destinations/ka1.jpg" alt="image"></a>
                     <p><a href="kilimanjaro.html" class="vv-link">Mount Kilimanjaro Trekking Routes</a></p>
@@ -189,24 +194,25 @@
                             alt="image"></a>
                     <p><a href="meruclimb.html" class="vv-link">Mount Meru Trecking</a></p>
                 </div>
-                <div class="gd-innf" data-aos="fade-up">
-                    <a href="Tanzania.html">
+                <div class="gd-innf" data-aos="zoom-in" data-aos-delay="100">
+                    <a href="NorthParks.html">
                         <img class="img-responsive" src="assets/parks/images/pa3.jpg" alt="image"></a>
-                    <p><a href="Tanzania.html" class="vv-link">Tanzania Destinations</a></p>
+                    <p><a href="NorthParks.html" class="vv-link">Tanzania Destinations</a></p>
                 </div>
             </div>
             <div class="d-grid grid-column-3 second-grids">
-                <div class="gd-innf" data-aos="fade-up">
+                <div class="gd-innf" data-aos="zoom-in" data-aos-delay="100">
                     <a href="Zanzibar.html">
                         <img class="img-responsive" src="assets/destinations/da4.jpg" alt="image"></a>
                     <p><a href="Zanzibar.html" class="vv-link">Zanzibar Beaches</a></p>
                 </div>
                 <div class="gd-innf">
-                    <a href="./Kenya.html"><img class="img-responsive" src="assets/parks/images/kenya.jpg"
+                    <a href="./Kenya.html">
+                        <img class="img-responsive" src="assets/parks/images/kenya.jpg"
                             alt="image"></a>
                     <p><a href="./Kenya.html" class="vv-link">Kenya Destinations</a></p>
                 </div>
-                <div class="gd-innf" data-aos="fade-up">
+                <div class="gd-innf" data-aos="zoom-in" data-aos-delay="100">
                     <a href="./assets/parks/daytour.html">
                         <img class="img-responsive" src="assets/destinations/da7.jpg"
                             alt="image"></a>
@@ -238,7 +244,7 @@
                                     budget.
                                 </p>
                                 <div class="main-action-19">
-                                    <a href="Tanzania.html" class="buttonbg action-btn-19">Learn More</a>
+                                    <a href="NorthParks.html" class="buttonbg action-btn-19">Learn More</a>
                                     <a href="Zanzibar.html" class="button button-dark">Explore</a>
                                 </div>
                             </div>
@@ -277,14 +283,6 @@
                                     </a>
                                 </div>
                                 <div class="feature">
-                                    <a href="./assets/parks/cycling.html">
-                                        <div class="icon-bg">
-                                            <span class="fa fa-bicycle" aria-hidden="true"></span>
-                                        </div>
-                                        <p>Cycling trips</p>
-                                    </a>
-                                </div>
-                                <div class="feature">
                                     <a href="Zanzibar.html">
                                         <div class="icon-bg">
                                             <span class="fa fa-clipboard" aria-hidden="true"></span>
@@ -293,7 +291,7 @@
                                     </a>
                                 </div>
                                 <div class="feature">
-                                    <a href="Tanzania.html">
+                                    <a href="NorthParks.html">
                                         <div class="icon-bg">
                                             <span class="fa fa-globe" aria-hidden="true"></span>
                                         </div>
@@ -353,6 +351,9 @@
             <button onclick="topFunction()" id="movetop" title="Go to top">
                 <span class="fa fa-angle-up"></span>
             </button>
+            <div id="preloader">
+              <img src="assets/images/logo.jpeg" alt="logo">
+            </div>
             <script  src="./Js/Main.js"></script>
             <script>
                 // When the user scrolls down 20px from the top of the document, show the button
