--- a/single.html
+++ b/single.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kilimangeti Tanzania Safari a Travel Category Responsive Web Template | Single Page </title>
+    <title>Kilimangeti Tanzania Safari</title>
     <link rel="stylesheet" href="assets/css/style-freedom.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -71,14 +71,12 @@
             <header>
                 <div class="wrapper">
                     <div class="header">
-                        <div>
-                            <h1>
-                                <a href="index.html" class="logo">Kilimangeti Safaris</a>
-                                <!-- if logo is image enable this   
-        						<a class="logo" href="index.html">
-        							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-        						</a> -->
-                            </h1>
+                      <div>
+                        <h1>
+                            <a class="logo" href="index.html">
+                                <img src="/assets/images/logo.jpeg" alt="Your logo" title="Your logo" style="height:85px;" />
+                            </a>
+                        </h1>
                         </div>
                         <div class="bottom-menu-content">
                             <input type="checkbox" id="nav" />
