--- a/team-single.html
+++ b/team-single.html
@@ -97,7 +97,9 @@
                                                     class="fa fa-angle-down" aria-hidden="true"></span></a>
                                             <input type="checkbox" id="drop-2" />
                                             <ul class="first-dropdwon">
-                                                <li><a href="Tanzania.html">Tanzania</a></li>
+                                                <li><a href="NorthParks.html">Tanzania - North Parks</a></li>
+                                                <li><a href="SouthParks.html">Tanzania - South Parks</a></li>
+                                                <li><a href="whatonsafari.html">What to bring on Safari</a></li>
                                                 <li><a href="Zanzibar.html">Zanzibar</a></li>
                                                 <li><a href="Kenya.html">Kenya</a></li>
                                             </ul>
