--- a/whatforkili.html
+++ b/whatforkili.html
@@ -71,11 +71,9 @@
                     <div class="header">
                         <div>
                             <h1>
-                                <a href="index.html" class="logo">Kilimangeti Tanzania Safari</a>
-                                <!-- if logo is image enable this   
-    						<a class="logo" href="index.html">
-    							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-    						</a> -->
+                                <a class="logo" href="index.html">
+                                    <img src="/assets/images/logo.jpeg" alt="Your logo" title="Your logo" style="height:85px;" />
+                                </a>
                             </h1>
                         </div>
                         <div class="bottom-menu-content">
@@ -93,7 +91,9 @@
                                                 class="fa fa-angle-down" aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-2" />
                                         <ul class="first-dropdwon">
-                                            <li><a href="Tanzania.html">Tanzania</a></li>
+                                            <li><a href="NorthParks.html">Tanzania - North Parks</a></li>
+                                            <li><a href="SouthParks.html">Tanzania - South Parks</a></li>
+                                            <li><a href="whatonsafari.html">What to bring on Safari</a></li>
                                             <li><a href="Zanzibar.html">Zanzibar</a></li>
                                             <li><a href="Kenya.html">Kenya</a></li>
                                         </ul>
@@ -117,8 +117,8 @@
                                                 class="fa fa-angle-down" aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-4" />
                                         <ul>
-                                            <li><a href="Kili-what to know.html">Day Tour</a></li>
-                                            <li><a href="Kili-what to know-cart.html">Maasai Cultural Tour</a></li>
+                                            <li><a href="assets/parks/daytour.html">Day Tour</a></li>
+                                            <li><a href="Maasai.html">Maasai Cultural Tour</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html" class="link-nav">Contact</a></li>
@@ -488,8 +488,4 @@
         </section>
         <!-- //w3l-footer-16 -->
     </body>
-
-
-    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/Kilimangeti Tanzania Safari-freedom-demo_Free/1269922037/web/Kili-what to know.html by HTTrack  Kilimangeti Tanzania Safari Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:03:13 GMT -->
-
 </html>
