--- a/SouthParks.html
+++ b/SouthParks.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="assets/css/style-freedom.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -56,22 +60,19 @@
         ga('require', 'urlChangeTracker');
         ga('send', 'pageview');
     </script>
-    <script async src='../../../../../../js/autotrack.js'></script>
     <meta name="robots" content="noindex">
 
     <body>
-        <link rel="stylesheet" href="../../../../../../images/ Kilimangeti Tanzania Safari.css">
-        <!-- header -->
         <div class="w3l-headers-9">
             <header>
                 <div class="wrapper">
                     <div class="header">
                         <div>
-                            <h1>
-                                <a class="logo" href="index.html">
-                                    <img src="/assets/images/logo.jpeg" alt="Your logo" title="Your logo" style="height:85px;" />
-                                </a>
-                            </h1>
+                        <h1>
+                            <a class="logo" href="index.html">
+                                <img src="/assets/images/logo.jpeg" alt="Your logo" title="Your logo" style="height:85px;" />
+                            </a>
+                        </h1>
                         </div>
                         <div class="bottom-menu-content">
                             <input type="checkbox" id="nav" />
@@ -82,8 +83,8 @@
                                     <li><a href="about.html" class="link-nav">About</a></li>
                                     <li>
                                         <!-- First Tier Drop Down -->
-                                        <label for="drop-2" class="toggle toogle-2">Safaris <span class="fa fa-angle-down"
-                                                aria-hidden="true"></span></label>
+                                        <label for="drop-2" class="toggle toogle-2">Safaris <span
+                                                class="fa fa-angle-down" aria-hidden="true"></span></label>
                                         <a href="#safaris" class="link-nav dropdown-toggle">Safaris <span
                                                 class="fa fa-angle-down" aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-2" />
@@ -104,14 +105,14 @@
                                         <ul>
                                             <li><a href="kilimanjaro.html"> Mount Kilimanjaro</a></li>
                                             <li><a href="whatforkili.html"> What for Kili</a></li>
-                                            <li><a href="meruclimb.html"> Mount Meru </a></li>
+                                            <li><a href="meruclimb.html">Mount Meru </a></li>
                                         </ul>
                                     </li>
                                     <li>
                                         <label for="drop-4" class="toggle toogle-2">Tours <span class="fa fa-angle-down"
                                                 aria-hidden="true"></span></label>
-                                        <a href="#shop" class="link-nav dropdown-toggle">Tours <span class="fa fa-angle-down"
-                                                aria-hidden="true"></span></a>
+                                        <a href="#shop" class="link-nav dropdown-toggle">Tours <span
+                                                class="fa fa-angle-down" aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-4" />
                                         <ul>
                                             <li><a href="./assets/parks/daytour.html">Day Tour</a></li>
@@ -130,70 +131,111 @@
             </header>
             <!-- //header -->
         </div>
-        <!-- inner banner -->
-        <section class="w3l-inner-banner-main">
-            <div class="banner-9">
+        <!-- Carousel wrapper -->
+        <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselIndicators" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item  active">
+                    <img class="d-block w-100" src="./assets/parks/DayTours/images/img6.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/parks/DayTours/images/img4.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/parks/DayTours/images/img3.png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/parks/images/pa3.jpg" alt="Third slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <!-- //Carousel wrapper -->
+        <!-- //covers -->
+        <!-- w3l-text-22 -->
+        <section class="w3l-grids-6">
+            <!-- grids -->
+            <div class="grids-layout">
                 <div class="wrapper">
-                    <ul class="breadcrumbs-custom-path">
-                        <li><a href="index.html">Home <span class="fa fa-angle-right" aria-hidden="true"></span></a>
-                        </li>
-                        <li><a href="#pages">Mountain Trekking <span class="fa fa-angle-right" aria-hidden="true"></span></a></li>
-                        <li class="active">Meru Climb</li>
-                    </ul>
+                    <h3 class="title-main">POPULAR TANZANIA DESTINATIONS</h3>
+                    <p class="sub-title">
+                        Welcome to Our Company! Your travel agency with guaranteed authenticity and with personalized
+                        services to make your
+                        dream adventures come true.
+                    </p>
+                    <div class="d-grid grid-column-3">
+                        <div class="gd-innf" data-aos="fade-up">
+                            <a href="./assets/parks/ArushaPark.html">
+                                <img class="img-responsive" src="./assets/parks/images/pa1.jpg" alt="image"></a>
+                            <p><a href="./assets/parks/ArushaPark.html" class="vv-link">Arusha National Park</a></p>
+                        </div>
+                        <div class="gd-innf" data-aos="fade-right">
+                            <a href="./assets/parks/serengetiPark.html"><img class="img-responsive"
+                                    src="assets/parks/images/pa3.jpg" alt="image"></a>
+                            <p><a href="./assets/parks/serengetiPark.html" class="vv-link">Serengeti National Park</a>
+                            </p>
+                        </div>
+                        <div class="gd-innf" data-aos="fade-up">
+                            <a href="kilimanjaro.html"><img class="img-responsive" src="assets/parks//images/ba8.jpg"
+                                    alt="image"></a>
+                            <p><a href="kilimanjaro.html" class="vv-link">Kilimanjaro National Park</a></p>
+                        </div>
+                    </div>
+                    <div class="d-grid grid-column-3 second-grids">
+                        <div class="gd-innf">
+                            <a href="./assets/parks/ngorongoroPark.html"><img class="img-responsive"
+                                    src="assets/parks/images/ba9.jpg" alt="image"></a>
+                            <p>
+                                <a href="./assets/parks/ngorongoroPark.html" class="vv-link">Ngorongoro National
+                                    Park</a>
+                            </p>
+                        </div>
+                        <div class="gd-innf" data-aos="fade-bottom">
+                            <a href="./assets/parks/lmanyara.html"><img class="img-responsive"
+                                    src="assets/parks/images/pa2.jpg" alt="image"></a>
+                            <p><a href="./assets/parks/lmanyara.html" class="vv-link">Lake Manyara National Park</a>
+                            </p>
+                        </div>
+                        <div class="gd-innf" data-aos="fade-up">
+                            <a href="./assets/parks/tarangirePark.html"><img class="img-responsive"
+                                    src="assets/parks/images/ba6.jpg" alt="image"></a>
+                            <p><a href="./assets/parks/tarangirePark.html" class="vv-link">Tarangire National Park</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- //grids -->
+        </section>
+        <!-- Call to action 29 block -->
+        <section class="w3l-call-to-action-29">
+            <div class="cal-action-29">
+                <div class="wrapper">
+                    <div class="action-main-29 align-center">
+                        <h4 class="cal-action-text-29">
+                            Buy a Tour Safari have a new life Experience
+                        </h4>
+                        <p>If you are ever looking for a places to stay in your vacation, Kilimangeti Tanzania Safari
+                            have you
+                            covered. We have the most affordable price for our safari packages </p>
+                        <a href="book.html" class="buttonbg">Book Now</a>
+                    </div>
                 </div>
             </div>
         </section>
-        <!-- //covers -->
-        <div class="heading_kili">
-            <h3 class="title-main">CLIMBING MOUNT MERU</h3>
-            <div class="d-flex">
-                <p>We offers an exceptional product for small groups or individuals wanting to climb Kilimanjaro. This
-                    package includes transport and accomodation before and after the ascent to Kilimanjaro.</p>
-                <p>All our climbs are guaranteed, so a registration is enough to guarantee the climb. The maximum number
-                    of
-                    people in each
-                    group is 12 people. It is therefore small groups facilitating the customization of the service.
-                    If desired, the group can be provided with a French speaking guide in the ascent, at no additional
-                    cost.
-                </p>
-            </div>
-        </div>
-        <!-- w3l-text-22 -->
-    <section >
-        <div class="row d-flex meru">
-            <div class="col-md-3">
-                <img class="img-fluid" src="assets/parks/images/meru1.jpg" alt="image"></a>
-            </div>
-            <div class="col-md-7">
-                <h4>Climb Mount Meru (3 days)</h4>
-                <p>
-                Explore mount Meru, one of Tanzania’s and Africa’s wonders. During your climb, you will enjoy the view of the landscape
-                and animals of the Arusha National Park. In the morning, you will be brought from your hotel to the entrance of Arusha
-                National Park, then you will leave at the entrance of Momella.</p>
-                <button class="kili_link">
-                    <a href="/assets/parks/Meru/meru1.html">Read More</a>
-                </button>
-            </div>
-        </div>
-    </section>
-<section class="hotel_content_kili">
-    <div class="row d-flex meru">
-        <div class="col-md-7">
-            <h4>Climb Mount Meru (4 days)</h4>
-            <p>Explore mount Meru, one of Tanzania’s and Africa’s wonders. During your climb, you will enjoy the view of the landscape
-            and animals of the Arusha National Park.
-            Arusha – Momella Gate (1500m) – Miriakamba Hut (2500m) In the morning you will be brought from your hotel to the
-            entrance to the Arusha National Park, then you will leave at the entrance of Momella.</p>
-            <button class="kili_link">
-                <a href="./assets/parks/Meru/meru2.html">Read More</a>
-            </button>
-        </div>
-        <div class="col-md-3">
-            <img class="img-responsive"  style="height: 300px; width: 400px;"
-             src="./assets/parks/images/meru2.jpg" alt="image"></a>
-        </div>
-    </div>
-</section>
+        <!-- //w3l-text-22 -->
         <!-- Text14 block -->
         <section class="w3l-footer-16">
             <!-- w3l-footer-16 -->
@@ -202,7 +244,7 @@
                     <div class="grid">
                         <div class="column">
                             <h2><a href="index.html" class="logo-2">Kilimangeti Tanzania Safari</a></h2>
-                            <p>All rights reserved.<br>©2019 <a href="http://Kilimangeti Tanzania Safari.com/"
+                            <p>All rights reserved.<br>2021 <a href="http://Kilimangeti Tanzania Safari.com/"
                                     target="_blank">Kilimangeti Tanzania Safari</a>
                             </p>
                         </div>
@@ -218,13 +260,11 @@
                         <div class="column">
                             <h3>Pages</h3>
                             <ul class="footer-gd-16">
-                                <li><a href="Kili-what to know.html">Products</a></li>
+                                <li><a href="./whatforkili.html">whatforkili</a></li>
                                 <li><a href="blog.html">Blog Page</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
-                                <li><a href="login.html">Login</a></li>
-                                <li><a href="signup.html">Signup</a></li>
                             </ul>
-                        </div
+                        </div>
                         <div class="column column3">
                             <h3>Explore</h3>
                             <ul class="footer-gd-16">
@@ -248,7 +288,6 @@
             <button onclick="topFunction()" id="movetop" title="Go to top">
                 <span class="fa fa-angle-up"></span>
             </button>
-            <script src="./Js/Main.js"></script>
             <script>
                 // When the user scrolls down 20px from the top of the document, show the button
                 window.onscroll = function () {
@@ -268,6 +307,7 @@
                     document.body.scrollTop = 0;
                     document.documentElement.scrollTop = 0;
                 }
+                AOS.init();
             </script>
             <!-- //move top -->
         </section>
