--- a/Zanzibar.html
+++ b/Zanzibar.html
@@ -65,11 +65,9 @@
                     <div class="header">
                         <div>
                             <h1>
-                                <a href="index.html" class="logo">Kilimangeti Tanzania Safari</a>
-                                <!-- if logo is image enable this   
-						<a class="logo" href="index.html">
-							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-						</a> -->
+                                <a class="logo" href="index.html">
+                                    <img src="/assets/images/logo.jpeg" alt="Your logo" title="Your logo" style="height:85px;" />
+                                </a>
                             </h1>
                         </div>
                         <div class="bottom-menu-content">
@@ -87,7 +85,9 @@
                                                 class="fa fa-angle-down" aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-2" />
                                         <ul class="first-dropdwon">
-                                            <li><a href="Tanzania.html">Tanzania</a></li>
+                                            <li><a href="NorthParks.html">Tanzania - North Parks</a></li>
+                                            <li><a href="SouthParks.html">Tanzania - South Parks</a></li>
+                                            <li><a href="whatonsafari.html">What to bring on Safari</a></li>
                                             <li><a href="Zanzibar.html">Zanzibar</a></li>
                                             <li><a href="Kenya.html">Kenya</a></li>
                                         </ul>
@@ -289,8 +289,7 @@
             <button onclick="topFunction()" id="movetop" title="Go to top">
                 <span class="fa fa-angle-up"></span>
             </button>
-
-            <script src="./Js/Main.js"></script>
+            <script src="Js/Main.js"></script>
             <script>
                 // When the user scrolls down 20px from the top of the document, show the button
                 window.onscroll = function () {
